# magnopy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  L-HEADER  LICENSE.template  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: publish-to-pypi.yml  run-tests.yml  tests.yml
dev-tools/: README.rst  check-release-metadata.py  prepare-release.py
dev-tools/images/: origin-upstream-local.py  position-of-magnetic-sites.py  positions.py
docs/: requirements.txt
docs/images/: cs-choice-case-1.html  cs-choice-case-2.html  cs-choice-case-3.html  cs-choice-n-angles.html  minimization-antiferro.html  minimization-ferro.html  rf-choice-case-1.html  rf-choice-case-2.html  rf-choice-case-3.html  rf-choice-main-case.html  rf-choice-n-angles.html  rf-choice-special-cases.html  single-q-1.html  single-q-2.html  single-q-2d-example.html  single-q-3.html  single-q-4.html  single-q-5.html  single-q-6.html  spin-rotations-1.html  spin-rotations-2.html  spin-rotations-simple.html  spin-rotations-symmetric.html  uvn-choice-main-case.html  uvn-choice-n-angles.html  uvn-choice-special-cases.html  uvn-rf-main-case.html  uvn-rf-n-angles.html  uvn-rf-special-cases.html
docs/source/: cite.rst  conf.py  index.rst  support.rst
legacy_docs/: energy-minimization.rst
legacy_docs/images/: single-q-1.html  single-q-3.html  single-q-5.html  spin-rotations-simple.html  uvn-rf-n-angles.html  uvn-rf-special-cases.html
legacy_docs/input/: index.rst
legacy_docs/methods/: hp-higher.rst  magnetic-BZ.rst  quantization.rst  rewritten-spinham.rst  spin-fluctuations.rst  spinham.rst  uvn-rf.rst
legacy_docs/scripts/: convert-tb2j.rst
magnopy/: __init__.py
src/magnopy/: __init__.py  __main__.py  _diagonalization.py  _energy.py  _exceptions.py  _local_rf.py  _lswt.py  _monte-carlo.py  _osfix.py  _package_info.py  _parallelization.py  _pinfo.py  _plotly_engine.py  exceptions.py  experimental.py  geometry.py  units.py
tests/: test_diagonalisation.py  test_local_rf.py  test_parameters.py
tests/test_energy/: test_with_c1.py  test_with_c21.py  test_with_c22.py
tests/test_lswt/: test_cubic_fm.py
tests/test_parameters/: test_22.py  test_422.py  test_legacy.py
tests/test_spinham/: test_dipole_dipole.py  test_make_supercell.py  test_parameter.py
utests/: test_diagonalisation.py  test_local_rf.py
utests/io/: hdf5_internal.py  test_internal.py  test_verify.py  txt_internal.py  txt_verify.py
utests/template/: dispersion.py
utests/test_bosons/: test_local_rf.py  test_representations.py
utests/test_energy-notation/: test_isotropic_case.py
utests/test_io/: test_hdf5_internal.py  test_txt_internal.py  test_txt_verify.py
utests/test_lswt/: test_cubic_fm.py  test_dispersion.py
utests/test_magnons/: test_diagonalisation.py  test_local_rf.py  test_representations.py
utests/test_spinham/: test_energy.py  test_hamiltonian.py  test_notation.py  (+1 more)
(+629 files in other folders)
